.metadata/.plugins/org.eclipse.cdt.ui/lab4_LCD.build.log
15:38:27 **** Incremental Build of configuration Debug for project lab4_LCD ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'uart_print_cd':
../Core/Src/main.c:124:54: error: 'hrs' undeclared (first use in this function); did you mean 'hours'?
  124 |         sprintf(buffer, "%02d:%02d:%02d\r\n", cd_set(hrs), pcd -> minutes, pcd -> seconds);
      |                                                      ^~~
      |                                                      hours
../Core/Src/main.c:124:54: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:124:47: error: too few arguments to function 'cd_set'
  124 |         sprintf(buffer, "%02d:%02d:%02d\r\n", cd_set(hrs), pcd -> minutes, pcd -> seconds);
      |                                               ^~~~~~
../Core/Src/main.c:82:6: note: declared here
   82 | void cd_set(struct clock_data * pcd, uint8_t hrs, uint8_t min, uint8_t sec)
      |      ^~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:38:27 Build Failed. 3 errors, 0 warnings. (took 298ms)

